Fix a bug with font sizing on mobile

--- a/src/component/article/reader/reader.scss
+++ b/src/component/article/reader/reader.scss
@@ -32,8 +32,6 @@
       margin: 0px;
       color: rgb(44, 178, 255);
     }
-    > h4, span {
-    }
   }
 }
 
