--- a/src/content/pages/home/home.scss
+++ b/src/content/pages/home/home.scss
@@ -21,17 +21,3 @@ div.home {
         opacity: 0.7;
     }
 }
-
-@media screen and (max-width: 600px) {
-    div.home { 
-
-        h2 {
-            font-size: $medium-font;
-        }
-
-        > p {
-            color: white;
-            font-size: $medium-font;
-        }
-    }
-}
